--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>Lo-ad | Digital Marketing</title>
+  <title>Lo-ad | Everything Digital </title>
   <base href="/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Pacifico|Roboto:300,400,400i,500,700&amp;subset=cyrillic" rel="stylesheet">
